welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: not found: type boolean
def arriver() : boolean = {
                ^